@@ -25,6 +25,7 @@ import java.util.Arrays;
 import java.util.Base64;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 @Slf4j
 public class FileUtilities {
@@ -222,6 +223,6 @@ public class FileUtilities {
                                 return false;
                             }
                         })
-                .toList();
+                .collect(Collectors.toList());
     }
 }
